mobile common fixes

--- a/src/index.html
+++ b/src/index.html
@@ -27,11 +27,13 @@
 				<h3 class="modal-title">Have you already registered to get
 					whitelisted?</h3>
 				<div class="btn-wrap">
-					<p class="m-bottom"><a href="#" class="primary-theme-btn btn show-register-form">Not yet, I’d like to
+					<p class="m-bottom"><a href="#" class="primary-theme-btn btn show-register-form">Not yet,
+						I’d like to
 						register</a></p>
 					<p><a href="#" class="secondary-theme-btn btn show-download-modal">Yes, of course</a></p>
 				</div>
-				<a href="#" class="modal-link show-download-modal show-download-modal">I’ll register later, please take me to the document
+				<a href="#" class="modal-link show-download-modal show-download-modal">I’ll register later,
+					please take me to the document
 					&gt;</a>
 			</div>
 		</div>
@@ -51,7 +53,7 @@
 				<a href="#" class="logo"><img src="images/logo.png" alt="logo"></a>
 				<h3 class="modal-title">Your document is ready</h3>
 				<div class="btn-wrap">
-				<a href="#" class="primary-theme-btn btn show-thanks-modal">Download Whitepaper</a>
+					<a href="#" class="primary-theme-btn btn show-thanks-modal">Download Whitepaper</a>
 				</div>
 			</div>
 		</div>
@@ -69,7 +71,8 @@
 			</button>
 			<div class="inner-wrap">
 				<a href="#" class="logo"><img src="images/logo.png" alt="logo"></a>
-				<h3 class="modal-title">Please check your email, we will contact you shortly with more information.</h3>
+				<h3 class="modal-title">Please check your email, we will contact you shortly with more
+					information.</h3>
 				<h3 class="modal-title">Your document is ready</h3>
 				<div class="btn-wrap">
 					<a href="#" class="primary-theme-btn btn show-thanks-modal">Download Whitepaper</a>
@@ -86,18 +89,18 @@
 			<div class="main-navigation">
 				<div class="main-navigation-container">
 					<div class="inner-wrap">
-					<a href="#" class="bank-live-link"><span class="text">Bank live</span><span
-								class="icon"><img src="images/bank-live-icon.png" alt=""></span></a>
-					<ul class="main-nav">
-						<li><a href="#stoSection" class="main-nav-link">STO</a></li>
-						<li><a href="#roadmapSection" class="main-nav-link">Roadmap</a></li>
-						<li><a href="#teamSection" class="main-nav-link">Team</a></li>
-						<li><a href="#faqSection" class="main-nav-link">FAQ</a></li>
-						<li><a href="#footer" class="main-nav-link">Social</a></li>
-					</ul>
-					<a href="#" class="btn primary-theme-btn show-whitelist-modal" data-toggle="modal"
-						 data-target="#whitelistModal">Get
-						whitelisted</a>
+						<a href="#" class="bank-live-link"><span class="text">Bank live</span><span
+									class="icon"><img src="images/bank-live-icon.png" alt=""></span></a>
+						<ul class="main-nav">
+							<li><a href="#stoSection" class="main-nav-link">STO</a></li>
+							<li><a href="#roadmapSection" class="main-nav-link">Roadmap</a></li>
+							<li><a href="#teamSection" class="main-nav-link">Team</a></li>
+							<li><a href="#faqSection" class="main-nav-link">FAQ</a></li>
+							<li><a href="#footer" class="main-nav-link">Social</a></li>
+						</ul>
+						<a href="#" class="btn primary-theme-btn show-whitelist-modal" data-toggle="modal"
+							 data-target="#whitelistModal">Get
+							whitelisted</a>
 					</div>
 				</div>
 			</div>
@@ -190,7 +193,8 @@
 					</div>
 					<div class="sub-block-text text-right">worth of tokens</div>
 					<p class="text-right">
-						<a href="#" class="arr-link show-whitelist-modal" data-toggle="modal" data-target="#whitelistModal" >Get whitelisted &gt;</a>
+						<a href="#" class="arr-link show-whitelist-modal" data-toggle="modal"
+							 data-target="#whitelistModal">Get whitelisted &gt;</a>
 					</p>
 				</div>
 			</div>
@@ -308,7 +312,8 @@
 									<div class="doc-number">01</div>
 									<div class="doc-descr">
 										<h6 class="doc-title">One pager</h6>
-										<a href="#" class="arr-link document-download" data-doc-name="ONE PAGER">Download &gt;</a>
+										<a href="#" class="arr-link document-download" data-doc-name="ONE PAGER">Download
+											&gt;</a>
 									</div>
 								</div>
 							</div>
@@ -992,26 +997,26 @@
 			</div>
 		</div>
 	</section>
-	<section class="section subscribe-section">
-		<div class="container">
-			<h2 class="section-title">
-				<span class="top-text">Newsletter</span>
-				<span class="bottom-text">Want to stay updated?</span>
-			</h2>
-			<div class="subscribe-body">
-				<h4 class="subscribe-title">Sign up now and we will keep you updated about all phases <br>
-					of our Token Offering!</h4>
-				<a href="#" class="btn primary-theme-btn" data-toggle="modal" data-target="#whitelistModal">Get
-					whitelisted</a>
-			</div>
-		</div>
-	</section>
+	<!--<section class="section subscribe-section">-->
+		<!--<div class="container">-->
+			<!--<h2 class="section-title">-->
+				<!--<span class="top-text">Newsletter</span>-->
+				<!--<span class="bottom-text">Want to stay updated?</span>-->
+			<!--</h2>-->
+			<!--<div class="subscribe-body">-->
+				<!--<h4 class="subscribe-title">Sign up now and we will keep you updated about all phases <br>-->
+					<!--of our Token Offering!</h4>-->
+				<!--<a href="#" class="btn primary-theme-btn" data-toggle="modal" data-target="#whitelistModal">Get-->
+					<!--whitelisted</a>-->
+			<!--</div>-->
+		<!--</div>-->
+	<!--</section>-->
 </div>
 <footer id="footer" class="footer">
 	<div class="container">
 		<div class="footer-body">
 			<div class="row">
-				<div class="col col-12 col-8 footer-links">
+				<div class="col-sm-8 col-12 footer-links">
 					<div class="row">
 						<div class="col-6 col-sm-3">
 							<h6 class="foot-title">Bitwala Token</h6>
@@ -1045,7 +1050,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col col-12 footer-logo">
+				<div class="col-sm-4 col-12 footer-logo">
 					<a href="#" class="logo"><img src="images/logo.png" alt="png"></a>
 				</div>
 			</div>
@@ -1356,13 +1361,12 @@
 					</div>
 					<div class="col">
 						<p class="inner-title">Get your free banking account!</p>
-						<a class="bitwala-button modal-secondary-btn" href="#"><img src="images/bitwala-logo-blue.png"
-																																													 alt="bitwala"></a>
+						<a class="bitwala-button modal-secondary-btn" href="#"><img
+									src="images/bitwala-logo-blue.png"
+									alt="bitwala"></a>
 					</div>
 				</div>
-
 			</div>
-
 		</div>
 	</div>
 </div>
