team section content

--- a/src/index.html
+++ b/src/index.html
@@ -628,80 +628,94 @@
 				<div class="row justify-content-md-center">
 					<div class="col-12 col-md-6 col-lg-4">
 						<div class="team-member">
-							<img src="images/rawpixel.png" alt="photo">
+							<img src="images/jorg-pic.png" alt="jorg">
 							<div class="overlay">
-								<h6 class="member-name">Jan Goslicki</h6>
-								<div class="position">Chief Compliance Officer and Co-founder</div>
-								<div class="descr">Jan studied economics and has over 5 years of crypto and
-									blockchain
-									experience under his belt. Before founding Bitwala with Jörg and Ben, he worked at
-									PwC. Jan handles compliance, customer success and finances together with our CFO.
+								<h6 class="member-name">Jörg von Minckwitz</h6>
+								<div class="position">CEO</div>
+								<div class="descr">Jörg has been actively involved in Bitcoin since the beginning of
+									2011 and has a long legacy of founding Bitcoin and crypto-based businesses. He is
+									the co-founder of Bitsandcoins Consulting UG, the first Bitcoin Consulting in
+									Europe, as well as E4BTC, the first e-commerce shop in Europe focused on Bitcoin.
+									He also co-founded Bitcoins Berlin, the first Bitcoin startup incubator in Europe.
 								</div>
-								<a href="#" class="social-icon"><i class="fa fa-linkedin"
-																									 aria-hidden="true"></i></a>
+								<a href="https://www.linkedin.com/in/joergvonminckwitz" class="social-icon"><i
+											class="fa fa-linkedin"
+											aria-hidden="true"></i></a>
 							</div>
 						</div>
 					</div>
 					<div class="col-12 col-md-6 col-lg-4">
 						<div class="team-member">
-							<img src="images/bryan-angelo.png" alt="photo">
+							<img src="images/jan-pic.png" alt="jan">
 							<div class="overlay">
 								<h6 class="member-name">Jan Goslicki</h6>
-								<div class="position">Chief Compliance Officer and Co-founder</div>
-								<div class="descr">Jan studied economics and has over 5 years of crypto and
-									blockchain
-									experience under his belt. Before founding Bitwala with Jörg and Ben, he worked at
-									PwC. Jan handles compliance, customer success and finances together with our CFO.
+								<div class="position">CCO</div>
+								<div class="descr">Ex PwC, Jan has a strong attention to detail and quality
+									assurance. Jan oversees all aspects of finances, compliance and customer
+									relations. In July 2017 Jan had an accident that left him paralyzed. With his
+									strong mind and spirit, he is still actively contributing to the team and a
+									founding member and he will return to his desk within 2019.
 								</div>
-								<a href="#" class="social-icon"><i class="fa fa-linkedin"
-																									 aria-hidden="true"></i></a>
+								<a href="https://www.linkedin.com/in/jangoslicki" class="social-icon"><i
+											class="fa fa-linkedin"
+											aria-hidden="true"></i></a>
 							</div>
 						</div>
 					</div>
 					<div class="col-12 col-md-6 col-lg-4">
 						<div class="team-member">
-							<img src="images/ron-jake.png" alt="photo">
+							<img src="images/benjamin-pic.png" alt="benjamin">
 							<div class="overlay">
-								<h6 class="member-name">Jan Goslicki</h6>
-								<div class="position">Chief Compliance Officer and Co-founder</div>
-								<div class="descr">Jan studied economics and has over 5 years of crypto and
-									blockchain
-									experience under his belt. Before founding Bitwala with Jörg and Ben, he worked at
-									PwC. Jan handles compliance, customer success and finances together with our CFO.
+								<h6 class="member-name">Benjamin Jones</h6>
+								<div class="position">CTO</div>
+								<div class="descr">Ben graduated from the London School of Economics after obtaining
+									a B.Sc in philosophy and economics. Frustrated by the tautologous nature of
+									macroeconomic models in the wake of the financial crisis, Ben dived head first
+									into the Berlin startup scene. After mentoring startups in Ghana, he saw the
+									potential impact of bitcoin on the developing world and became hooked on crypto.
+									An avid believer and contributor to open source, Ben joined Jan and Jörg soon
+									after the consulting firm’s inception and quickly fell into the role of CTO.
 								</div>
-								<a href="#" class="social-icon"><i class="fa fa-linkedin"
-																									 aria-hidden="true"></i></a>
+								<a href="https://www.linkedin.com/in/benjamin-jones-b635874b" class="social-icon"><i
+											class="fa fa-linkedin"
+											aria-hidden="true"></i></a>
 							</div>
 						</div>
 					</div>
 					<div class="col-12 col-md-6 col-lg-4">
 						<div class="team-member">
-							<img src="images/tamarcus-brown.png" alt="photo">
+							<img src="images/christoph-pic.png" alt="Christoph">
 							<div class="overlay">
-								<h6 class="member-name">Jan Goslicki</h6>
-								<div class="position">Chief Compliance Officer and Co-founder</div>
-								<div class="descr">Jan studied economics and has over 5 years of crypto and
-									blockchain
-									experience under his belt. Before founding Bitwala with Jörg and Ben, he worked at
-									PwC. Jan handles compliance, customer success and finances together with our CFO.
+								<h6 class="member-name">Christoph Iwaniez</h6>
+								<div class="position">CFO</div>
+								<div class="descr">Christoph has joined Bitwala in July 2018 and is responsible for
+									budgeting, AML regulations, trading, and compliance. He has 10 + years of
+									experience in the traditional banking industry (LBBW) and M&A business. Christoph
+									also has experience as the CFO of a corporate start-up which connects German
+									Sparkassen Group to paydirekt payment scheme.
 								</div>
-								<a href="#" class="social-icon"><i class="fa fa-linkedin"
-																									 aria-hidden="true"></i></a>
+								<a href="https://www.linkedin.com/in/christoph-iwaniez-a93a558b"
+									 class="social-icon"><i class="fa fa-linkedin"
+																					aria-hidden="true"></i></a>
 							</div>
 						</div>
 					</div>
 					<div class="col-12 col-md-6 col-lg-4">
 						<div class="team-member">
-							<img src="images/bryan-angelo.png" alt="photo">
+							<img src="images/konstantin-pic.png" alt="Konstantin">
 							<div class="overlay">
-								<h6 class="member-name">Jan Goslicki</h6>
-								<div class="position">Chief Compliance Officer and Co-founder</div>
-								<div class="descr">Jan studied economics and has over 5 years of crypto and
-									blockchain
-									experience under his belt. Before founding Bitwala with Jörg and Ben, he worked at
-									PwC. Jan handles compliance, customer success and finances together with our CFO.
+								<h6 class="member-name">Konstantin Werhahn</h6>
+								<div class="position">CPO</div>
+								<div class="descr">Konstantin is responsible for the roadmap and brings a lot of
+									banking and FinTech experience to the leadership team. In his previous position,
+									he oversaw the product development of FinTech Group AG and helped to restructure
+									the 450 employees large group into a white-label platform banking provider. Before
+									the FinTech Group AG, he was the Head of Product at the FinTech Startup
+									Barzahlen.de and helped it to become an established payment provider. Konstantin
+									contributes with banking and financial infrastructure know-how as well as the
+									experience of building multiple successful FinTech companies.
 								</div>
-								<a href="#" class="social-icon"><i class="fa fa-linkedin"
+								<a href="https://www.linkedin.com/in/konstantinwerhahn" class="social-icon"><i class="fa fa-linkedin"
 																									 aria-hidden="true"></i></a>
 							</div>
 						</div>
@@ -998,18 +1012,18 @@
 		</div>
 	</section>
 	<!--<section class="section subscribe-section">-->
-		<!--<div class="container">-->
-			<!--<h2 class="section-title">-->
-				<!--<span class="top-text">Newsletter</span>-->
-				<!--<span class="bottom-text">Want to stay updated?</span>-->
-			<!--</h2>-->
-			<!--<div class="subscribe-body">-->
-				<!--<h4 class="subscribe-title">Sign up now and we will keep you updated about all phases <br>-->
-					<!--of our Token Offering!</h4>-->
-				<!--<a href="#" class="btn primary-theme-btn" data-toggle="modal" data-target="#whitelistModal">Get-->
-					<!--whitelisted</a>-->
-			<!--</div>-->
-		<!--</div>-->
+	<!--<div class="container">-->
+	<!--<h2 class="section-title">-->
+	<!--<span class="top-text">Newsletter</span>-->
+	<!--<span class="bottom-text">Want to stay updated?</span>-->
+	<!--</h2>-->
+	<!--<div class="subscribe-body">-->
+	<!--<h4 class="subscribe-title">Sign up now and we will keep you updated about all phases <br>-->
+	<!--of our Token Offering!</h4>-->
+	<!--<a href="#" class="btn primary-theme-btn" data-toggle="modal" data-target="#whitelistModal">Get-->
+	<!--whitelisted</a>-->
+	<!--</div>-->
+	<!--</div>-->
 	<!--</section>-->
 </div>
 <footer id="footer" class="footer">
