--- a/src/index.html
+++ b/src/index.html
@@ -742,27 +742,50 @@
 			<div class="container">
 				<div class="row no-gutters">
 					<div class="col-md-4 col-6 partner-item b-bottom b-right">
-						<a href="#" class="partner-link"><img src="images/logo-alst-grey.png" alt="alst"
-																									width="245"></a>
+						<a href="#" class="partner-link">
+							<img class="def-img" src="images/logo-alst-grey.png" alt="alst"
+																									width="245">
+							<img class="hov-img" src="images/logo-alst-hover.png" alt="alst"
+									 width="245">
+						</a>
 					</div>
 					<div class="col-md-4 col-6 partner-item b-bottom b-right crop-corners">
-						<a href="#" class="partner-link"><img src="images/logo-dcg-grey.png" alt="dcg"
-																									width="130"></a>
+						<a href="#" class="partner-link">
+							<img class="def-img" src="images/logo-dcg-grey.png" alt="dcg"
+																									width="130">
+							<img class="hov-img" src="images/logo-dcg-hover.png" alt="dcg"
+									 width="130">
+						</a>
 					</div>
 					<div class="col-md-4 col-6 partner-item b-bottom">
-						<a href="#" class="partner-link"><img src="images/logo-coparion-grey.png"
-																									alt="coparion" width="190"></a>
+						<a href="#" class="partner-link">
+							<img class="def-img" src="images/logo-coparion-grey.png"
+																									alt="coparion" width="190">
+							<img class="hov-img" src="images/logo-coparion-hover.png"
+									 alt="coparion" width="190">
+						</a>
 					</div>
 					<div class="col-md-4 col-6 partner-item b-right">
-						<a href="#" class="partner-link"><img src="images/logo-earlybird-grey.png"
-																									alt="earlybird" width="200"></a>
+						<a href="#" class="partner-link">
+							<img class="def-img" src="images/logo-earlybird-grey.png"
+																									alt="earlybird" width="200">
+							<img class="hov-img" src="images/logo-earlybird-hover.png"
+									 alt="earlybird" width="200">
+						</a>
 					</div>
 					<div class="col-md-4 col-6 partner-item b-right">
-						<a href="#" class="partner-link"><img src="images/logo-htgf-grey.png" alt="htgf"></a>
+						<a href="#" class="partner-link">
+							<img class="def-img" src="images/logo-htgf-grey.png" alt="htgf" width="250">
+							<img class="hov-img" src="images/logo-htgf-hover.png" alt="htgf" width="250">
+						</a>
 					</div>
 					<div class="col-md-4 col-6 partner-item">
-						<a href="#" class="partner-link"><img src="images/logo-solaris-bank-grey.png"
-																									alt="solaris" width="225px"></a>
+						<a href="#" class="partner-link">
+							<img class="def-img" src="images/logo-solaris-bank-grey.png"
+																									alt="solaris" width="225px">
+							<img class="hov-img" src="images/logo-solaris-bank-hover.png"
+									 alt="solaris" width="225px">
+						</a>
 					</div>
 				</div>
 			</div>
