partners hover and subscribe templating

--- a/src/index.html
+++ b/src/index.html
@@ -744,7 +744,7 @@
 					<div class="col-md-4 col-6 partner-item b-bottom b-right">
 						<a href="#" class="partner-link">
 							<img class="def-img" src="images/logo-alst-grey.png" alt="alst"
-																									width="245">
+									 width="245">
 							<img class="hov-img" src="images/logo-alst-hover.png" alt="alst"
 									 width="245">
 						</a>
@@ -752,7 +752,7 @@
 					<div class="col-md-4 col-6 partner-item b-bottom b-right crop-corners">
 						<a href="#" class="partner-link">
 							<img class="def-img" src="images/logo-dcg-grey.png" alt="dcg"
-																									width="130">
+									 width="130">
 							<img class="hov-img" src="images/logo-dcg-hover.png" alt="dcg"
 									 width="130">
 						</a>
@@ -760,7 +760,7 @@
 					<div class="col-md-4 col-6 partner-item b-bottom">
 						<a href="#" class="partner-link">
 							<img class="def-img" src="images/logo-coparion-grey.png"
-																									alt="coparion" width="190">
+									 alt="coparion" width="190">
 							<img class="hov-img" src="images/logo-coparion-hover.png"
 									 alt="coparion" width="190">
 						</a>
@@ -768,7 +768,7 @@
 					<div class="col-md-4 col-6 partner-item b-right">
 						<a href="#" class="partner-link">
 							<img class="def-img" src="images/logo-earlybird-grey.png"
-																									alt="earlybird" width="200">
+									 alt="earlybird" width="200">
 							<img class="hov-img" src="images/logo-earlybird-hover.png"
 									 alt="earlybird" width="200">
 						</a>
@@ -782,7 +782,7 @@
 					<div class="col-md-4 col-6 partner-item">
 						<a href="#" class="partner-link">
 							<img class="def-img" src="images/logo-solaris-bank-grey.png"
-																									alt="solaris" width="225px">
+									 alt="solaris" width="225px">
 							<img class="hov-img" src="images/logo-solaris-bank-hover.png"
 									 alt="solaris" width="225px">
 						</a>
@@ -1048,6 +1048,18 @@
 						</div>
 					</div>
 				</div>
+			</div>
+		</div>
+	</section>
+	<section class="section subscribe-section">
+		<div class="subscribe-block">
+			<div class="inner-wrapper">
+				<h2 class="subscribe-title">Don’t miss your chance</h2>
+				<div class="subscribe-descr">Join our list and we will keep you updated <br> about all phases
+					of our Token Offering!
+				</div>
+				<a href="#" class="btn dark-theme-btn" data-toggle="modal" data-target="#whitelistModal">Get
+					whitelisted</a>
 			</div>
 		</div>
 	</section>
