subscribe block animation

--- a/src/index.html
+++ b/src/index.html
@@ -1051,14 +1051,16 @@
 			</div>
 		</div>
 	</section>
-	<section class="section subscribe-section">
+	<section class="section subscribe-section" data-aos="fade-up"  data-aos-anchor-placement="center-bottom">
 		<div class="subscribe-block">
 			<div class="inner-wrapper">
-				<h2 class="subscribe-title">Don’t miss your chance</h2>
-				<div class="subscribe-descr">Join our list and we will keep you updated <br> about all phases
+				<h2 class="subscribe-title" data-aos="fade-down"
+						data-aos-delay="100"
+						data-aos-duration="1500">Don’t miss your chance</h2>
+				<div class="subscribe-descr" 	data-aos-duration="1500" data-aos="fade-right" data-aos-delay="200">Join our list and we will keep you updated <br> about all phases
 					of our Token Offering!
 				</div>
-				<a href="#" class="btn dark-theme-btn" data-toggle="modal" data-target="#whitelistModal">Get
+				<a href="#" class="btn dark-theme-btn" data-toggle="modal" data-target="#whitelistModal" 	data-aos-duration="1500" data-aos="fade-up" data-aos-delay="100">Get
 					whitelisted</a>
 			</div>
 		</div>
