--- a/src/index.html
+++ b/src/index.html
@@ -468,19 +468,17 @@
 									<div class="col-12 col-md-5">
 										<div class="inner-img">
 											<img class="bg-img" src="images/slider-img-1.png" alt="image">
-											<img class="review-logo" src="images/logo-bitcoin-foundation-white.png"
+											<img class="review-logo" src="images/logo-coinfirm-white.png"
 													 alt="logo">
 										</div>
 									</div>
 									<div class="col-12 col-md-7">
 										<div class="review">
 											<div class="review-text">
-												<p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-													tempor
-													incididunt ut labore et dolore magna aliqua. Tempor incididunt ut labore
-													et
-													dolore magna aliqua.”</p>
-												<div class="review-author">Mark Brown, Bitcoin Foundation</div>
+												<p>“With what they accomplished, especially their regulatory compliance
+													approach, Bitwala could be the first platform to make retail crypto
+													investing truly accessible for everyone.”</p>
+												<div class="review-author">Grant Blaisdell, CMO & Co-Founder</div>
 											</div>
 										</div>
 									</div>
@@ -490,86 +488,86 @@
 								<div class="row no-gutters">
 									<div class="col-12 col-md-5">
 										<div class="inner-img">
-											<img class="bg-img" src="images/slider-img-1.png" alt="image">
+											<img class="bg-img" src="images/pic-brickblock.png" alt="image">
+											<img class="review-logo" src="images/logo-brickblock-white.png"
+													 alt="logo">
 										</div>
 									</div>
 									<div class="col-12 col-md-7">
 										<div class="review">
 											<div class="review-text">
-												<p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-													tempor
-													incididunt ut labore et dolore magna aliqua. Tempor incididunt ut labore
-													et
-													dolore magna aliqua.”</p>
-												<div class="review-author">Mark Brown, Bitcoin Foundation</div>
+												<p>“Bitwala has built within the banking industry an easy to use product
+													that links the traditional and the "crypto" world in a secure way for new
+													blockchain enthusiasts.”</p>
+												<div class="review-author">Manuel Gonzalez Alzuru, CMO</div>
 											</div>
 										</div>
 									</div>
 								</div>
 							</div>
-							<div class="carousel-item">
-								<div class="row no-gutters">
-									<div class="col-12 col-md-5">
-										<div class="inner-img">
-											<img class="bg-img" src="images/slider-img-1.png" alt="image">
-										</div>
-									</div>
-									<div class="col-12 col-md-7">
-										<div class="review">
-											<div class="review-text">
-												<p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-													tempor
-													incididunt ut labore et dolore magna aliqua. Tempor incididunt ut labore
-													et
-													dolore magna aliqua.”</p>
-												<div class="review-author">Mark Brown, Bitcoin Foundation</div>
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="carousel-item">
-								<div class="row no-gutters">
-									<div class="col-12 col-md-5">
-										<div class="inner-img">
-											<img class="bg-img" src="images/slider-img-1.png" alt="image">
-										</div>
-									</div>
-									<div class="col-12 col-md-7">
-										<div class="review">
-											<div class="review-text">
-												<p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-													tempor
-													incididunt ut labore et dolore magna aliqua. Tempor incididunt ut labore
-													et
-													dolore magna aliqua.”</p>
-												<div class="review-author">Mark Brown, Bitcoin Foundation</div>
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="carousel-item">
-								<div class="row no-gutters">
-									<div class="col-12 col-md-5">
-										<div class="inner-img">
-											<img class="bg-img" src="images/slider-img-1.png" alt="image">
-										</div>
-									</div>
-									<div class="col-12 col-md-7">
-										<div class="review">
-											<div class="review-text">
-												<p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-													tempor
-													incididunt ut labore et dolore magna aliqua. Tempor incididunt ut labore
-													et
-													dolore magna aliqua.”</p>
-												<div class="review-author">Mark Brown, Bitcoin Foundation</div>
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
+							<!--							<div class="carousel-item">
+															<div class="row no-gutters">
+																<div class="col-12 col-md-5">
+																	<div class="inner-img">
+																		<img class="bg-img" src="images/slider-img-1.png" alt="image">
+																	</div>
+																</div>
+																<div class="col-12 col-md-7">
+																	<div class="review">
+																		<div class="review-text">
+																			<p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+																				tempor
+																				incididunt ut labore et dolore magna aliqua. Tempor incididunt ut labore
+																				et
+																				dolore magna aliqua.”</p>
+																			<div class="review-author">Mark Brown, Bitcoin Foundation</div>
+																		</div>
+																	</div>
+																</div>
+															</div>
+														</div>
+														<div class="carousel-item">
+															<div class="row no-gutters">
+																<div class="col-12 col-md-5">
+																	<div class="inner-img">
+																		<img class="bg-img" src="images/slider-img-1.png" alt="image">
+																	</div>
+																</div>
+																<div class="col-12 col-md-7">
+																	<div class="review">
+																		<div class="review-text">
+																			<p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+																				tempor
+																				incididunt ut labore et dolore magna aliqua. Tempor incididunt ut labore
+																				et
+																				dolore magna aliqua.”</p>
+																			<div class="review-author">Mark Brown, Bitcoin Foundation</div>
+																		</div>
+																	</div>
+																</div>
+															</div>
+														</div>
+														<div class="carousel-item">
+															<div class="row no-gutters">
+																<div class="col-12 col-md-5">
+																	<div class="inner-img">
+																		<img class="bg-img" src="images/slider-img-1.png" alt="image">
+																	</div>
+																</div>
+																<div class="col-12 col-md-7">
+																	<div class="review">
+																		<div class="review-text">
+																			<p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+																				tempor
+																				incididunt ut labore et dolore magna aliqua. Tempor incididunt ut labore
+																				et
+																				dolore magna aliqua.”</p>
+																			<div class="review-author">Mark Brown, Bitcoin Foundation</div>
+																		</div>
+																	</div>
+																</div>
+															</div>
+														</div>-->
 						</div>
 						<a class="carousel-control carousel-control-prev" href="#carouselExampleIndicators"
 							 role="button" data-slide="prev">
@@ -584,18 +582,18 @@
 					</div>
 					<ol class="carousel-indicators">
 						<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active">
-							<img class="active-img" src="images/logo-bitcoin-foundation-blue.png"
+							<img class="active-img" src="images/logo-coinfirm-hover.png"
 									 alt="bitcoin-foundation" width="140">
-							<img class="default-img" src="images/logo-bitcoin-foundation-grey.png"
+							<img class="default-img" src="images/logo-coinfirm-grey.png"
 									 alt="bitcoin-foundation" width="140">
 						</li>
 						<li data-target="#carouselExampleIndicators" data-slide-to="1">
-							<img class="active-img" src="images/logo-coindesk-blue.png" alt="bitcoin-foundation"
+							<img class="active-img" src="images/logo-brickblock-hover.png" alt="brickblock"
 									 width="160">
-							<img class="default-img" src="images/logo-coindesk-grey.png" alt="bitcoin-foundation"
+							<img class="default-img" src="images/logo-brickblock-grey.png" alt="brickblock"
 									 width="160">
 						</li>
-						<li data-target="#carouselExampleIndicators" data-slide-to="2">
+			<!--			<li data-target="#carouselExampleIndicators" data-slide-to="2">
 							<img class="active-img" src="images/logo-solaris-bank-blue.png"
 									 alt="bitcoin-foundation" width="170">
 							<img class="default-img" src="images/logo-solaris-bank-grey.png"
@@ -612,7 +610,7 @@
 									 width="130">
 							<img class="default-img" src="images/logo-coparion-grey.png" alt="bitcoin-foundation"
 									 width="130">
-						</li>
+						</li>-->
 					</ol>
 				</div>
 			</div>
@@ -1051,16 +1049,19 @@
 			</div>
 		</div>
 	</section>
-	<section class="section subscribe-section" data-aos="fade-up"  data-aos-anchor-placement="center-bottom">
+	<section class="section subscribe-section" data-aos="fade-up"
+					 data-aos-anchor-placement="center-bottom">
 		<div class="subscribe-block">
 			<div class="inner-wrapper">
 				<h2 class="subscribe-title" data-aos="fade-down"
 						data-aos-delay="100"
 						data-aos-duration="1500">Don’t miss your chance</h2>
-				<div class="subscribe-descr" 	data-aos-duration="1500" data-aos="fade-right" data-aos-delay="200">Join our list and we will keep you updated <br> about all phases
+				<div class="subscribe-descr" data-aos-duration="1500" data-aos="fade-right"
+						 data-aos-delay="200">Join our list and we will keep you updated <br> about all phases
 					of our Token Offering!
 				</div>
-				<a href="#" class="btn dark-theme-btn" data-toggle="modal" data-target="#whitelistModal" 	data-aos-duration="1500" data-aos="fade-up" data-aos-delay="100">Get
+				<a href="#" class="btn dark-theme-btn" data-toggle="modal" data-target="#whitelistModal"
+					 data-aos-duration="1500" data-aos="fade-up" data-aos-delay="100">Get
 					whitelisted</a>
 			</div>
 		</div>
