--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,25 @@
 	<link href="css/main.css" rel="stylesheet">
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/css/select2.min.css"
 				rel="stylesheet"/>
+	<link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.1.0/cookieconsent.min.css" />
 	<script
 				src='https://www.google.com/recaptcha/api.js?render=6LcO0ocUAAAAABj11_siC5P2rZSsxviho9yi0XMh'></script>
+	<script src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.1.0/cookieconsent.min.js"></script>
+	<script>
+      window.addEventListener("load", function(){
+        window.cookieconsent.initialise({
+          "palette": {
+            "popup": {
+              "background": "#212442"
+            },
+            "button": {
+              "background": "#5140ff"
+            }
+          },
+          "theme": "edgeless",
+          "type": "opt-out"
+        })});
+	</script>
 </head>
 <body>
 <!--register modal-->
@@ -115,7 +132,7 @@
 	<section class="section section-home">
 		<div class="container">
 			<h1 class="main-title">The only account</h1>
-			<h2 class="main-sub-title">Merging banking, crypto & tokenized assets</h2>
+			<h2 class="main-sub-title">Merging banking, crypto & tokenised assets</h2>
 			<div class="home-descr">
 				<p class="description">We’re growing Bitwala into a one-of-a-kind platform and you can be
 					part of it!</p>
@@ -165,7 +182,7 @@
 					<div class="quotation">
 						<p class="text">“Up to 10% of the global GDP (~$10 trillion) will be tokenised and
 							available for trading on a blockchain by 2025” </p>
-						<p class="sign">– WEF 2018</p>
+						<p class="sign">– WEF 2015</p>
 					</div>
 					<div class="section-img-mobile">
 						<img src="images/graphic-market-growth-mobile.png" alt="market growth">
@@ -232,7 +249,7 @@
 						<div class="roadmap-item">
 							<img src="images/icon-development.png" alt="development">
 							<h4 class="item-title">More choices, less hassle</h4>
-							<div class="item-descr">Our planned developments include mobile payment (Apple &
+							<div class="item-descr">Our planned products include mobile payment (Apple &
 								Google Pay), automatic taxation for crypto trading, lending and much more.
 							</div>
 						</div>
@@ -267,7 +284,7 @@
 						<img class="token-graphic-icon" src="images/icon-key.png" alt="key">
 						<div class="separator"></div>
 						<div class="descr">
-							Tokens guarantee preferential participation rights in dividends and exit proceeds
+							Tokens give 15% preferential participation rights in dividends and exit proceeds
 						</div>
 					</div>
 					<div class="token-graphic-item left second">
@@ -281,19 +298,19 @@
 						<img class="token-graphic-icon" src="images/icon-coin.png" alt="coin">
 						<div class="separator"></div>
 						<div class="descr">
-							Tokens provide rights similar to Zero-Coupon Convertible
+							Tokens provide downround anti-dillution protection
 						</div>
 					</div>
 					<div class="token-graphic-item right fourth">
 						<img class="token-graphic-icon" src="images/icon-hand.png" alt="hand">
 						<div class="separator"></div>
 						<div class="descr">
-							Tokens are liquid and
+							Tokens are fungible and
 							easily tradable
 						</div>
 					</div>
 					<div class="token-graphic-descr">
-						The first fully German compliant Security Token.
+						The fully German compliant Security Token.
 					</div>
 				</div>
 			</div>
@@ -357,7 +374,7 @@
 					<div class="col-sm-6 col-6">
 						<div class="ts-item">
 							<img class="ts-icon" src="images/icon-price-tag.png" alt="price" width="57">
-							<h5 class="ts-item-title">1 BWT = 1 EUR</h5>
+							<h5 class="ts-item-title">1 BWL = 1 EUR</h5>
 							<div class="ts-item-descr">Token nominal price</div>
 						</div>
 					</div>
@@ -742,7 +759,7 @@
 			<div class="container">
 				<div class="row no-gutters">
 					<div class="col-md-4 col-6 partner-item b-bottom b-right">
-						<a href="#" class="partner-link">
+						<a href="https://www.alstin.de/de" class="partner-link">
 							<img class="def-img" src="images/logo-alst-grey.png" alt="alst"
 									 width="245">
 							<img class="hov-img" src="images/logo-alst-hover.png" alt="alst"
@@ -750,7 +767,7 @@
 						</a>
 					</div>
 					<div class="col-md-4 col-6 partner-item b-bottom b-right crop-corners">
-						<a href="#" class="partner-link">
+						<a href="https://dcg.co/" class="partner-link">
 							<img class="def-img" src="images/logo-dcg-grey.png" alt="dcg"
 									 width="130">
 							<img class="hov-img" src="images/logo-dcg-hover.png" alt="dcg"
@@ -758,7 +775,7 @@
 						</a>
 					</div>
 					<div class="col-md-4 col-6 partner-item b-bottom">
-						<a href="#" class="partner-link">
+						<a href="https://coparion.vc/en" class="partner-link">
 							<img class="def-img" src="images/logo-coparion-grey.png"
 									 alt="coparion" width="190">
 							<img class="hov-img" src="images/logo-coparion-hover.png"
@@ -766,7 +783,7 @@
 						</a>
 					</div>
 					<div class="col-md-4 col-6 partner-item b-right">
-						<a href="#" class="partner-link">
+						<a href="https://earlybird.com/" class="partner-link">
 							<img class="def-img" src="images/logo-earlybird-grey.png"
 									 alt="earlybird" width="200">
 							<img class="hov-img" src="images/logo-earlybird-hover.png"
@@ -774,13 +791,13 @@
 						</a>
 					</div>
 					<div class="col-md-4 col-6 partner-item b-right">
-						<a href="#" class="partner-link">
+						<a href="https://high-tech-gruenderfonds.de/en/" class="partner-link">
 							<img class="def-img" src="images/logo-htgf-grey.png" alt="htgf" width="250">
 							<img class="hov-img" src="images/logo-htgf-hover.png" alt="htgf" width="250">
 						</a>
 					</div>
 					<div class="col-md-4 col-6 partner-item">
-						<a href="#" class="partner-link">
+						<a href="https://www.solarisbank.com/en/" class="partner-link">
 							<img class="def-img" src="images/logo-solaris-bank-grey.png"
 									 alt="solaris" width="225px">
 							<img class="hov-img" src="images/logo-solaris-bank-hover.png"
@@ -816,7 +833,7 @@
 						 class="img-wrap"><img src="images/logo-cnbc.png" alt="cnbc" height="65"></a>
 				</div>
 				<div class="col col-12 col-lg-4 col-md-6 text-center">
-					<p>“40.000 clients signed up for the new crypto banking service.”</p>
+					<p>“40,000 clients signed up for the new crypto banking service.”</p>
 					<a target="_blank"
 						 href="https://de.cointelegraph.com/news/bitwala-startet-erstes-vollwertiges-deutsches-bitcoin-girokonto"
 						 class="img-wrap"><img src="images/logo-cointelegraph.png" alt="cointelegraph"
@@ -1089,8 +1106,8 @@
 						<div class="col-6 col-sm-3">
 							<h6 class="foot-title">Bitwala Token</h6>
 							<ul class="foot-links">
-								<li><a href="#" class="foot-link">Privacy Policy</a></li>
-								<li><a href="#" class="foot-link">Imprint</a></li>
+								<li><a href="https://www.bitwala.com/privacy-policy/" class="foot-link">Privacy Policy</a></li>
+								<li><a href="https://www.bitwala.com/imprint/" class="foot-link">Imprint</a></li>
 							</ul>
 						</div>
 						<div class="col-6 col-sm-3">
@@ -1102,18 +1119,18 @@
 						<div class="col-6 col-sm-3">
 							<h6 class="foot-title">Help</h6>
 							<ul class="foot-links">
-								<li><a href="#" class="foot-link">Contact Us</a></li>
-								<li><a href="#" class="foot-link">Blog</a></li>
+								<li><a href="mailto: invest@bitwala.com" class="foot-link">Contact Us</a></li>
+								<li><a href="https://www.bitwala.com/news" class="foot-link">Blog</a></li>
 							</ul>
 						</div>
 						<div class="col-6 col-sm-3">
 							<h6 class="foot-title">Social</h6>
 							<ul class="foot-links">
-								<li><a href="#" class="foot-link">Twitter</a></li>
-								<li><a href="#" class="foot-link">Facebook</a></li>
-								<li><a href="#" class="foot-link">YouTube</a></li>
-								<li><a href="#" class="foot-link">Reddit</a></li>
-								<li><a href="#" class="foot-link">Bitcoin Talk</a></li>
+								<li><a href="https://t.me/BitwalaTGE" class="foot-link">Twitter</a></li>
+								<li><a href="https://twitter.com/bitwala" class="foot-link">Twitter</a></li>
+								<li><a href="https://bitcointalk.org/index.php?topic=944782.0" class="foot-link">Bitcoin Talk</a></li>
+								<li><a href="https://www.reddit.com/r/Bitwala/" class="foot-link">Reddit</a></li>
+								<li><a href="https://www.youtube.com/channel/UCDtxxYIs-2cW84hMdUxMIhQ" class="foot-link">Youtube</a></li>
 							</ul>
 						</div>
 					</div>
@@ -1132,7 +1149,7 @@
 				of solarisBank AG within the meaning of § 2 Section 10 of the German Banking Act in the
 				register which is kept by the German Federal Financial Supervisory Authority. The register
 				can
-				be accessed under www.bafin.de.</p>
+				be accessed under <a href="http://www.bafin.de">www.bafin.de</a>.</p>
 			<p>
 				Warning of risks: <br>
 				Trading cryptocurrencies carries high risk and can lead to the total loss of the invested
@@ -1143,7 +1160,7 @@
 				in
 				no case indicate your success in the future. The cryptocurrencies traded on Bitwala.com are
 				not suitable for all investors. For further information to the product offering, visit our
-				Support Center.</p>
+				<a href="http://support.bitwala.com/hc/en-gb/articles/360000381900">Support Center</a>.</p>
 			<p>© Copyright 2018 Bitwala GmbH</p>
 		</div>
 	</div>
