introducing section changes

--- a/src/index.html
+++ b/src/index.html
@@ -159,13 +159,13 @@
 					<span class="bottom-text">Bitwala Token Offering</span>
 				</h2>
 			</div>
-			<div class="section-descr">
+			<div class="section-descr container">
 				<img class="section-img" src="images/graphic-market-growth.png" alt="market growth">
 				<div class="container abs-container">
 					<div class="quotation">
 						<p class="text">“Up to 10% of the global GDP (~$10 trillion) will be tokenised and
 							available for trading on a blockchain by 2025” </p>
-						<p class="sign">– WEF 2018</p>
+						<p class="sign">– WEF 2015</p>
 					</div>
 					<div class="section-img-mobile">
 						<img src="images/graphic-market-growth-mobile.png" alt="market growth">
