fix footer links

--- a/src/index.html
+++ b/src/index.html
@@ -1107,31 +1107,31 @@
 						<div class="col-6 col-sm-3">
 							<h6 class="foot-title">Bitwala Token</h6>
 							<ul class="foot-links">
-								<li><a href="https://www.bitwala.com/privacy-policy/" class="foot-link">Privacy Policy</a></li>
-								<li><a href="https://www.bitwala.com/imprint/" class="foot-link">Imprint</a></li>
+								<li><a target="_blank" href="https://www.bitwala.com/privacy-policy/" class="foot-link">Privacy Policy</a></li>
+								<li><a target="_blank" href="https://www.bitwala.com/imprint/" class="foot-link">Imprint</a></li>
 							</ul>
 						</div>
 						<div class="col-6 col-sm-3">
 							<h6 class="foot-title">Platform</h6>
 							<ul class="foot-links">
-								<li><a href="#" class="foot-link">Home page</a></li>
+								<li><a target="_blank" href="#" class="foot-link">Home page</a></li>
 							</ul>
 						</div>
 						<div class="col-6 col-sm-3">
 							<h6 class="foot-title">Help</h6>
 							<ul class="foot-links">
-								<li><a href="mailto: invest@bitwala.com" class="foot-link">Contact Us</a></li>
-								<li><a href="https://www.bitwala.com/news" class="foot-link">Blog</a></li>
+								<li><a target="_blank" href="mailto: invest@bitwala.com" class="foot-link">Contact Us</a></li>
+								<li><a target="_blank" href="https://www.bitwala.com/news" class="foot-link">Blog</a></li>
 							</ul>
 						</div>
 						<div class="col-6 col-sm-3">
 							<h6 class="foot-title">Social</h6>
 							<ul class="foot-links">
-								<li><a href="https://t.me/BitwalaTGE" class="foot-link">Twitter</a></li>
-								<li><a href="https://twitter.com/bitwala" class="foot-link">Twitter</a></li>
-								<li><a href="https://bitcointalk.org/index.php?topic=944782.0" class="foot-link">Bitcoin Talk</a></li>
-								<li><a href="https://www.reddit.com/r/Bitwala/" class="foot-link">Reddit</a></li>
-								<li><a href="https://www.youtube.com/channel/UCDtxxYIs-2cW84hMdUxMIhQ" class="foot-link">Youtube</a></li>
+								<li><a target="_blank" href="https://t.me/BitwalaTGE" class="foot-link">Twitter</a></li>
+								<li><a target="_blank" href="https://twitter.com/bitwala" class="foot-link">Twitter</a></li>
+								<li><a target="_blank" href="https://bitcointalk.org/index.php?topic=944782.0" class="foot-link">Bitcoin Talk</a></li>
+								<li><a target="_blank" href="https://www.reddit.com/r/Bitwala/" class="foot-link">Reddit</a></li>
+								<li><a target="_blank" href="https://www.youtube.com/channel/UCDtxxYIs-2cW84hMdUxMIhQ" class="foot-link">Youtube</a></li>
 							</ul>
 						</div>
 					</div>
@@ -1150,7 +1150,7 @@
 				of solarisBank AG within the meaning of § 2 Section 10 of the German Banking Act in the
 				register which is kept by the German Federal Financial Supervisory Authority. The register
 				can
-				be accessed under <a href="http://www.bafin.de">www.bafin.de</a>.</p>
+				be accessed under <a target="_blank" href="http://www.bafin.de">www.bafin.de</a>.</p>
 			<p>
 				Warning of risks: <br>
 				Trading cryptocurrencies carries high risk and can lead to the total loss of the invested
@@ -1161,7 +1161,7 @@
 				in
 				no case indicate your success in the future. The cryptocurrencies traded on Bitwala.com are
 				not suitable for all investors. For further information to the product offering, visit our
-				<a href="http://support.bitwala.com/hc/en-gb/articles/360000381900">Support Center</a>.</p>
+				<a target="_blank" href="http://support.bitwala.com/hc/en-gb/articles/360000381900">Support Center</a>.</p>
 			<p>© Copyright 2018 Bitwala GmbH</p>
 		</div>
 	</div>
