show members description by click

--- a/src/index.html
+++ b/src/index.html
@@ -646,7 +646,7 @@
 					<div class="col-12 col-md-6 col-lg-4">
 						<div class="team-member">
 							<img src="images/jorg-pic.png" alt="jorg">
-							<div class="overlay">
+							<div class="overlay" style="display: none">
 								<h6 class="member-name">Jörg von Minckwitz</h6>
 								<div class="position">CEO</div>
 								<div class="descr">Jörg has been actively involved in Bitcoin since the beginning of
@@ -665,7 +665,7 @@
 					<div class="col-12 col-md-6 col-lg-4">
 						<div class="team-member">
 							<img src="images/jan-pic.png" alt="jan">
-							<div class="overlay">
+							<div class="overlay" style="display: none">
 								<h6 class="member-name">Jan Goslicki</h6>
 								<div class="position">CCO</div>
 								<div class="descr">Ex PwC, Jan has a strong attention to detail and quality
@@ -684,7 +684,7 @@
 					<div class="col-12 col-md-6 col-lg-4">
 						<div class="team-member">
 							<img src="images/benjamin-pic.png" alt="benjamin">
-							<div class="overlay">
+							<div class="overlay" style="display: none">
 								<h6 class="member-name">Benjamin Jones</h6>
 								<div class="position">CTO</div>
 								<div class="descr">Ben graduated from the London School of Economics after obtaining
@@ -705,7 +705,7 @@
 					<div class="col-12 col-md-6 col-lg-4">
 						<div class="team-member">
 							<img src="images/christoph-pic.png" alt="Christoph">
-							<div class="overlay">
+							<div class="overlay" style="display: none">
 								<h6 class="member-name">Christoph Iwaniez</h6>
 								<div class="position">CFO</div>
 								<div class="descr">Christoph has joined Bitwala in July 2018 and is responsible for
@@ -723,7 +723,7 @@
 					<div class="col-12 col-md-6 col-lg-4">
 						<div class="team-member">
 							<img src="images/konstantin-pic.png" alt="Konstantin">
-							<div class="overlay">
+							<div class="overlay" style="display: none">
 								<h6 class="member-name">Konstantin Werhahn</h6>
 								<div class="position">CPO</div>
 								<div class="descr">Konstantin is responsible for the roadmap and brings a lot of
